<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <groupId>b0x.us</groupId>
  <artifactId>MediaPlayer</artifactId>
  <version>1.0.0-SNAPSHOT</version>
  <name>MediaPlayer</name>
  <packaging>jar</packaging>

  <properties>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <maven.compiler.release>21</maven.compiler.release>

    <!-- IMPORTANT:
         Your code imports org.bukkit.craftbukkit.v1_20_R4.*
         That maps to Minecraft/Spigot 1.20.4.
    -->
    <spigot.version>1.20.4-R0.1-SNAPSHOT</spigot.version>
    <bkcommonlib.version>1.21.1-v1</bkcommonlib.version>
  </properties>

  <repositories>
    <repository>
      <id>spigotmc-repo</id>
      <url>https://hub.spigotmc.org/nexus/content/repositories/snapshots/</url>
    </repository>
    <!-- BKCommonLib repo (needed so its transitive deps like RegionChangeTracker can resolve) -->
    <repository>
      <id>mg-dev</id>
      <url>https://ci.mg-dev.eu/plugin/repository/everything/</url>
    </repository>
  </repositories>

  <dependencies>
    <!-- Bukkit/Spigot API for compile-time -->
    <dependency>
      <groupId>org.spigotmc</groupId>
      <artifactId>spigot-api</artifactId>
      <version>${spigot.version}</version>
      <scope>provided</scope>
    </dependency>

    <dependency>
      <groupId>io.netty</groupId>
      <artifactId>netty-all</artifactId>
      <version>4.1.109.Final</version>
      <scope>provided</scope>
    </dependency>

    <dependency>
      <groupId>com.googlecode.json-simple</groupId>
      <artifactId>json-simple</artifactId>
      <version>1.1.1</version>
    </dependency>

    <!-- Optional (only if your code imports it). Keep provided so it’s not shaded into your jar. -->
    <dependency>
      <groupId>com.bergerkiller.bukkit</groupId>
      <artifactId>BKCommonLib</artifactId>
      <version>${bkcommonlib.version}</version>
      <scope>provided</scope>
      <optional>true</optional>
    </dependency>

    <dependency>
      <groupId>org.junit.jupiter</groupId>
      <artifactId>junit-jupiter</artifactId>
      <version>5.10.2</version>
      <scope>test</scope>
    </dependency>
  </dependencies>

  <build>
    <!-- Your sources are NOT in src/main/java; they are in src/fr/... -->
    <sourceDirectory>src</sourceDirectory>

    <resources>
      <!-- Your plugin.yml is in the repo root, not under src/main/resources -->
      <resource>
        <directory>.</directory>
        <includes>
          <include>plugin.yml</include>
        </includes>
      </resource>
    </resources>

    <plugins>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-compiler-plugin</artifactId>
        <version>3.13.0</version>
        <configuration>
          <release>${maven.compiler.release}</release>
          <encoding>${project.build.sourceEncoding}</encoding>
          <excludes>
            <exclude>test/**</exclude>
          </excludes>
        </configuration>
      </plugin>

      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-jar-plugin</artifactId>
        <version>3.4.2</version>
        <configuration>
          <archive>
            <manifest>
              <addDefaultImplementationEntries>true</addDefaultImplementationEntries>
              <addDefaultSpecificationEntries>true</addDefaultSpecificationEntries>
            </manifest>
          </archive>
        </configuration>
      </plugin>

      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-surefire-plugin</artifactId>
        <version>3.2.5</version>
      </plugin>
    </plugins>
  </build>
</project>
